--- a/package.json
+++ b/package.json
@@ -35,13 +35,22 @@
     ]
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@google/genai": "^1.25.0",
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "chromadb": "^3.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
+    "node-whisper": "^2024.11.13",
+    "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
     "zod": "^4.1.3"
@@ -52,11 +61,11 @@
     "@eslint/js": "^9.34.0",
     "@rushstack/eslint-patch": "^1.12.0",
     "@tailwindcss/vite": "^4.1.12",
-    "@types/node": "^24.3.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "@vitejs/plugin-react": "^5.0.1",
     "cross-env": "^10.0.0",
+    "dotenv": "^17.2.3",
     "electron": "^37.3.1",
     "electron-builder": "^26.0.12",
     "electron-vite": "^4.0.0",
