--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,8 +1,37 @@
-tensorflow
-numpy==1.26.4
-torch==2.5.1
-ultralytics==8.0.196
-opencv-python==4.9.0.80
-fer==22.5.0
-face-recognition==1.3.0
-moviepy==1.0.3
+# Core dependencies
+opencv-python>=4.8.0
+numpy>=1.24.0,<2.0.0
+tqdm>=4.66.0
+
+# ML/AI frameworks - Latest stable for M1
+torch>=2.1.0
+torchvision>=0.16.0
+ultralytics>=8.0.0
+
+# Face recognition
+face-recognition>=1.3.0
+dlib>=19.24.0
+
+# Emotion detection (optional - can be heavy)
+fer>=22.5.0
+tensorflow>=2.13.0
+
+# Vector database
+chromadb>=0.4.0
+
+# Audio transcription
+openai-whisper>=20230314
+
+# Color analysis
+scikit-learn>=1.3.0
+
+# OCR
+easyocr>=1.7.0
+Pillow>=9.3.0
+
+# Monitoring
+psutil>=5.9.0
+
+# API Server
+websockets>=12.0
+python-multipart>=0.0.6
