fix: update package.json and lock files

--- a/package.json
+++ b/package.json
@@ -40,19 +40,27 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@types/fluent-ffmpeg": "^2.1.27",
     "chromadb": "^3.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
     "node-whisper": "^2024.11.13",
+    "radix-ui": "^1.4.3",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
+    "ws": "^8.18.3",
     "zod": "^4.1.3"
   },
   "devDependencies": {
@@ -61,8 +69,10 @@
     "@eslint/js": "^9.34.0",
     "@rushstack/eslint-patch": "^1.12.0",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/ffprobe-static": "^2.0.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.1",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.3",
@@ -72,6 +82,7 @@
     "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
     "framer-motion": "^12.23.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
