--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -11,6 +11,9 @@ files:
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
 asarUnpack:
   - resources/**
+  - node_modules/ffmpeg-static/**/*
+  - node_modules/ffprobe-static/**/*
+  - node_modules/exiftool-vendored/**/*
 win:
   executableName: ElectronReactApp
 nsis:
