--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build:unpack": "run-s vite:build:app electron:build:dir",
     "build:win": "run-s vite:build:app electron:build:win",
     "build:mac": "run-s vite:build:app electron:build:mac",
-    "build:linux": "run-s vite:build:app electron:build:linux"
+    "build:linux": "run-s vite:build:app electron:build:linux",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
     "@chroma-core/default-embed": "^0.1.8",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-label": "^2.1.7",
@@ -52,6 +54,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "exiftool-vendored": "^31.1.0",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
@@ -91,6 +95,7 @@
     "tailwindcss": "^4.1.12",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0",
-    "vite": "^7.1.3"
+    "vite": "^7.1.3",
+    "vitest": "^3.2.4"
   }
 }
