--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -3,7 +3,7 @@ opencv-python>=4.8.0
 numpy>=1.24.0,<2.0.0
 tqdm>=4.66.0
 
-# ML/AI frameworks - Latest stable for M1
+# ML/AI frameworks 
 torch>=2.1.0
 torchvision>=0.16.0
 ultralytics>=8.0.0
@@ -32,6 +32,10 @@ Pillow>=9.3.0
 # Monitoring
 psutil>=5.9.0
 
-# API Server
+# Websockets 
 websockets>=12.0
 python-multipart>=0.0.6
+
+# Testing
+pytest>=7.4.0
+pytest-mock>=3.12.0
