--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "era",
-  "version": "12.0.0",
-  "description": "A modern Electron application template with React, Vite, TypeScript, Shadcn UI and TailwindCSS",
+  "name": "edit-mind",
+  "version": "0.1.0",
+  "description": "AI-Powered Video Indexing and Search",
   "main": "./out/main/main.js",
   "license": "MIT",
   "author": {
-    "name": "Guasam",
-    "url": "https://github.com/guasam"
+    "name": "ilias",
+    "url": "https://github.com/iliashad"
   },
   "scripts": {
     "dev": "cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w",
@@ -27,19 +27,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/guasam/electron-react-app"
-  },
-  "pnpm": {
-    "onlyBuiltDependencies": [
-      "electron",
-      "esbuild"
-    ]
+    "url": "https://github.com/iliashad/edit-mind"
   },
   "dependencies": {
     "@chroma-core/default-embed": "^0.1.8",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-label": "^2.1.7",
@@ -50,13 +43,16 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@types/fluent-ffmpeg": "^2.1.27",
+    "canvas-confetti": "^1.9.3",
     "chromadb": "^3.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "exiftool-vendored": "^31.1.0",
-    "ffmpeg-static": "^5.2.0",
+    "ffmpeg-ffprobe-static": "^6.1.2-rc.1",
     "fluent-ffmpeg": "^2.1.3",
+    "gopro-telemetry": "^1.2.11",
+    "gpmf-extract": "^0.3.2",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
     "node-whisper": "^2024.11.13",
@@ -73,7 +69,6 @@
     "@eslint/js": "^9.34.0",
     "@rushstack/eslint-patch": "^1.12.0",
     "@tailwindcss/vite": "^4.1.12",
-    "@types/ffprobe-static": "^2.0.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "@types/ws": "^8.18.1",
@@ -86,7 +81,6 @@
     "eslint": "^9.34.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "ffprobe-static": "^3.1.0",
     "framer-motion": "^12.23.12",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
