--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "lucide-react": "^0.541.0",
     "node-whisper": "^2024.11.13",
     "radix-ui": "^1.4.3",
+    "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
