--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build:win": "run-s vite:build:app electron:build:win",
     "build:mac": "run-s vite:build:app electron:build:mac",
     "build:linux": "run-s vite:build:app electron:build:linux",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "repository": {
     "type": "git",
@@ -33,8 +34,6 @@
     "@chroma-core/default-embed": "^0.1.8",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
-    "@google/genai": "^1.25.0",
-    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -55,6 +54,7 @@
     "gpmf-extract": "^0.3.2",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
+    "node-llama-cpp": "^3.14.2",
     "node-whisper": "^2024.11.13",
     "radix-ui": "^1.4.3",
     "react-error-boundary": "^6.0.0",
@@ -74,6 +74,7 @@
     "@types/react-dom": "^19.1.8",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-react": "^5.0.1",
+    "@vitest/ui": "^3.2.4",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.3",
     "electron": "^37.3.1",
