--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -109,7 +109,7 @@ jobs:
 
       - name: Start Chroma DB
         run: |
-          chroma-server --host 0.0.0.0 --port 8000 &
+          chroma run --host localhost --port 8000 --path .chroma_db &
           for i in {1..30}; do
             if nc -z localhost 8000; then
               echo "✅ Chroma is ready"
