--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -1,32 +1,39 @@
 {
   "name": "background-jobs",
-  "version": "1.0.0",
+  "version": "0.1.1",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc ",
+    "dev": "tsx watch -r tsconfig-paths/register  src/index.ts",
+    "build": "tsx -r tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
+    "@bull-board/api": "^6.14.1",
+    "@bull-board/express": "^6.14.1",
+    "@bull-board/ui": "^6.14.1",
+    "@prisma/client": "6.19.0",
     "axios": "^1.7.0",
     "body-parser": "^2.2.0",
     "bullmq": "^5.6.0",
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.19.0",
-    "ioredis": "^5.3.2",
-    "pg": "^8.11.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.2",
+    "ioredis": "^5.4.2",
+    "pg": "^8.13.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/node": "^22.0.0",
     "@types/pg": "^8.15.6",
-    "prisma": "^6.19.0",
+    "prisma": "6.19.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.4.0"
+    "typescript": "5.9.2"
   }
 }
