--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,15 +1,15 @@
 {
   "name": "shared",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "AI-Powered Video Indexing and Search",
   "main": "./out/main/main.js",
+  "type": "module",
   "license": "MIT",
   "author": {
     "name": "ilias",
     "url": "https://github.com/iliashad"
   },
   "scripts": {
-    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,6 @@
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
-    "@prisma/client": "^6.18.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -43,6 +42,7 @@
     "gpmf-extract": "^0.3.2",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
+    "node-fetch": "^3.3.2",
     "node-whisper": "^2024.11.13",
     "radix-ui": "^1.4.3",
     "react-error-boundary": "^6.0.0",
@@ -58,6 +58,7 @@
     "@eslint/js": "^9.34.0",
     "@rushstack/eslint-patch": "^1.12.0",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/node": "^22",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "@types/ws": "^8.18.1",
