--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../tsconfig.json",
-  "compilerOptions": {},
-  "include": ["**/*.ts"]
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "paths": {
+      "@/lib/*": ["./packages/shared/*"]
+    }
+  },
+  "include": ["**/*.ts", ".ts"]
 }
