--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -20,7 +20,7 @@ tensorflow>=2.13.0
 chromadb>=0.4.0
 
 # Audio transcription
-openai-whisper>=20230314
+faster-whisper>=1.2.1
 
 # Color analysis
 scikit-learn>=1.3.0
