--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -2,48 +2,73 @@ services:
   background-jobs:
     build:
       context: ..
-      dockerfile: docker/Dockerfile.background-jobs
+      dockerfile: docker/Dockerfile.background-jobs.dev
+    image: edit-mind-background-jobs:dev
     ports:
-      - "4000:4000" 
+      - "4000:4000"
+      - "8765:8765"
     depends_on:
-      - redis
-      - postgres
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_started
     environment:
       - REDIS_URL=redis://redis:6379
       - DATABASE_URL=postgresql://user:password@postgres:5432/app
-      - PYTHON_SERVICE_URL=http://python-worker:5000
       - HOST_MEDIA_PATH=/media/videos
+      - CHROMA_URL=http://chroma:8000
+      - PYTHON_PORT=8765
+      - USE_UNIX_SOCKET=true
+      - CHROMA_HOST=chroma
+      - CHROMA_PORT=8000
+    env_file:
+      - ../.env
+    volumes:
+      - ..:/app:delegated
+      - ../.thumbnails:/.thumbnails
+      - background_jobs_node_modules:/app/node_modules:cached
+      - python_venv:/app/python/.venv:cached
     networks:
       - app-network
-    volumes:
-      - ..:/app
 
   web:
     build:
       context: ..
-      dockerfile: docker/Dockerfile.web
+      dockerfile: docker/Dockerfile.web.dev
+    image: edit-mind-web:dev
     ports:
-      - "3745:3745" 
+      - "3745:3745"
     environment:
       - PORT=3745
-      - CHROMA_URL=http://chroma:8000
-      - SESSION_SECRET="testing"
+      - CHROMA_HOST=chroma
+      - CHROMA_PORT=8000
+      - BACKGROUND_JOBS_URL=http://background-jobs:4000
+      - DATABASE_URL=postgresql://user:password@postgres:5432/app
+    env_file:
+      - ../.env
     depends_on:
-      - chroma
+      postgres:
+        condition: service_healthy
+      chroma:
+        condition: service_started
+    volumes:
+      - ..:/app:delegated
+      - web_node_modules:/app/node_modules:cached
+      - ../.thumbnails:/.thumbnails:cached
     networks:
       - app-network
-    volumes:
-      - ..:/app
 
   chroma:
     image: chromadb/chroma:latest
+    container_name: chroma
     ports:
-      - "8747:8000"  
+      - "8000:8000"
     volumes:
-      - chroma_data:/chroma/chroma
+      - ../.chroma_db:/data
     environment:
       - IS_PERSISTENT=TRUE
-      - ANONYMIZED_TELEMETRY=${CHROMA_TELEMETRY:-FALSE}
+      - ANONYMIZED_TELEMETRY=FALSE
+      - CHROMA_SERVER_CORS_ALLOW_ORIGINS=["*"]
     networks:
       - app-network
 
@@ -62,16 +87,25 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=app
+      - PGDATA=/var/lib/postgresql/data/pgdata 
     ports:
       - "5433:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d app"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped 
 
 volumes:
-  chroma_data:
   pgdata:
+  web_node_modules:
+  background_jobs_node_modules:
+  python_venv:
 
 networks:
   app-network:
