fix: update web app config files

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,6 +12,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"],
+      "@shared/*": ["../../packages/shared/*"],
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
