fix: update main tsconfig json file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["./packages/shared/*"]
+      "@shared/*": ["packages/shared/*"]
     }
   },
-  "files": []
+  "include": [
+    "apps/**/*",
+    "packages/**/*"
+  ]
 }
