--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,46 +1,31 @@
-# =========================
-# 1️⃣ Base image for pnpm
-# =========================
-FROM node:22.20.0 AS base
+FROM node:22.20.0
+
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
+RUN corepack enable && corepack prepare pnpm@8.6.9 --activate
+
 WORKDIR /app
 
-# =========================
-# 2️⃣ Install dependencies
-# =========================
-FROM base AS deps
+# Copy package files
 COPY pnpm-workspace.yaml ./
 COPY pnpm-lock.yaml ./
 COPY package.json ./
-COPY apps/web/package.json ./apps/web/
+COPY prisma.config.ts ./
+COPY apps/web/ ./apps/web
 COPY apps/background-jobs/package.json ./apps/background-jobs/
-RUN pnpm install --ignore-scripts
+COPY packages/shared/ ./packages/shared
+COPY packages/prisma/ ./packages/prisma
+
+# Install dependencies
+RUN --mount=type=cache,id=pnpm,target=/root/.pnpm-store pnpm install --frozen-lockfile
 RUN pnpm rebuild @tailwindcss/oxide
-COPY packages/prisma ./
-RUN pnpm prisma generate 
+RUN pnpm rebuild rollup
 
-# =========================
-# 3️⃣ Build app
-# =========================
-FROM base AS build
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-RUN pnpm --filter web build
 
-# =========================
-# 4️⃣ Production runtime
-# =========================
-FROM base AS final
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=build /app/apps/web/build ./apps/web/build
-COPY --from=build /app/apps/web/package.json ./apps/web/
-COPY --from=build /app/package.json ./
-COPY --from=build /app/pnpm-lock.yaml ./
-COPY --from=build /app/pnpm-workspace.yaml ./
-RUN pnpm install --ignore-scripts
-COPY packages/prisma ./
+# Copy necessary config files
+COPY tsconfig.json ./
+COPY apps/web/vite.config.ts ./apps/web/vite.config.ts
 
 EXPOSE 3745
-CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm --filter web start"]
+
+CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed &&  pnpm prisma generate  && pnpm --filter web start --port 3745 --host"]
