feat: use chroma default embedding package

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,8 +9,7 @@
     "name": "ilias",
     "url": "https://github.com/iliashad"
   },
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/iliashad/edit-mind"
@@ -32,6 +31,7 @@
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.3",
     "chromadb": "^3.0.17",
+    "chromadb-default-embed": "^2.14.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
