minor changes and fixes

--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -1,12 +1,15 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    "rootDir": "./",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./*"],
+      "@/app/*": ["./app/*"],
       "@/lib/*": ["./lib/*"],
       "@/resources/*": ["./resources/*"],
+      "@shared/*": ["../../packages/shared/*"]
     }
   },
   "files": [],
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
 }
