--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,6 +19,7 @@
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
+    "@immich/sdk": "^2.2.3",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -28,6 +29,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-router/fs-routes": "^7.9.5",
     "@types/fluent-ffmpeg": "^2.1.27",
+    "@xenova/transformers": "^2.17.2",
     "bcryptjs": "^3.0.3",
     "canvas-confetti": "^1.9.3",
     "chromadb": "^3.0.17",
@@ -43,12 +45,14 @@
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
     "node-fetch": "^3.3.2",
+    "node-llama-cpp": "^3.14.2",
     "node-whisper": "^2024.11.13",
     "radix-ui": "^1.4.3",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.4",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
     "ws": "^8.18.3",
