feat: add path alias to background jobs app

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "~/*": ["./app/*"],
       "@shared/*": ["../../packages/shared/*"],
+      "@background-jobs/*": ["../../packages/background-jobs/*"]
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
