--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
   "devDependencies": {
     "@types/node": "^22.0.0",
     "prisma": "6.19.0",
-    "ts-node": "^10.9.2",
-    "typescript": "5.9.2"
+    "ts-node": "^10.9.2"
   },
   "pnpm": {
     "overrides": {
-      "esbuild": "^0.21.5",
-      "typescript": "5.9.2"
+      "esbuild": "^0.21.5"
     }
   }
 }
