--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -42,6 +42,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "gopro-telemetry": "^1.2.11",
     "gpmf-extract": "^0.3.2",
+    "ioredis": "^5.4.2",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
     "node-fetch": "^3.3.2",
@@ -52,6 +53,7 @@
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.4",
+    "redis": "^5.9.0",
     "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
