fix: move desktop app settings json into apps/desktop

--- a/apps/desktop/settings.json
+++ b/apps/desktop/settings.json
@@ -6,8 +6,8 @@
   "batch_size": 16,
   "yolo_confidence": 0.35,
   "yolo_iou": 0.45,
-  "resize_to_720p": true,
-  "yolo_model": "yolov8n.pt",
+  "resize_to_1080p": true,
+  "yolo_model": "yolov8x.pt",
   "output_dir": "analysis_results",
   "enable_streaming": true,
   "enable_aggressive_gc": true,
