--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "isbot": "^5.1.31",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.541.0",
     "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
