--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -13,7 +13,8 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "start": "electron-vite preview",
-    "postinstall": "electron-builder install-app-deps",
+    "postinstall": "electron-builder install-app-deps && pnpm run build:shared",
+    "build:shared": "pnpm --filter shared build",
     "vite:build:app": "electron-vite build",
     "electron:build:win": "electron-builder --win",
     "electron:build:mac": "electron-builder --mac",
@@ -44,10 +45,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "ffmpeg-ffprobe-static": "6.1.2-rc.1",
     "lucide-react": "^0.541.0",
     "radix-ui": "^1.4.3",
     "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.9.4",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
     "ws": "^8.18.3",
