fix: minor updates when migration to new monorepo arch

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,10 +1,19 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
+    "declaration": true,
+    "sourceMap": true,
+    "declarationMap": true,
+    "rootDir": ".",
     "esModuleInterop": true,
-    "paths": {
-      "@/lib/*": ["./packages/shared/*"]
-    }
+    "module": "ESNext",     
+    "target": "ES2020",
+    "outDir": "dist",
+    "moduleResolution": "Node",
+    "strict": true,
+    "skipLibCheck": true,
+    "paths": { "@shared/*": ["./*"] }
   },
-  "include": ["**/*.ts", ".ts"]
+  "include": ["**/*.ts"]
 }
