--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -2,20 +2,27 @@
   "name": "shared",
   "version": "0.1.1",
   "description": "AI-Powered Video Indexing and Search",
-  "main": "./out/main/main.js",
   "type": "module",
+  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "license": "MIT",
   "author": {
     "name": "ilias",
     "url": "https://github.com/iliashad"
   },
-  "scripts": {},
+  "scripts": {
+    "build": "tsc --outDir dist"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/iliashad/edit-mind"
   },
   "dependencies": {
     "@chroma-core/default-embed": "^0.1.8",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google/genai": "^1.25.0",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
@@ -38,7 +45,6 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "exiftool-vendored": "^31.1.0",
-    "ffmpeg-ffprobe-static": "^6.1.2-rc.1",
     "fluent-ffmpeg": "^2.1.3",
     "gopro-telemetry": "^1.2.11",
     "gpmf-extract": "^0.3.2",
