--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -1,47 +1,58 @@
-# =========================
-# 1️⃣ Base image for pnpm
-# =========================
-FROM node:22.20.0 AS base
+FROM node:22.20.0
+
+# Configure pnpm
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
+RUN corepack enable && corepack prepare pnpm@8.6.9 --activate
+
+# Install system dependencies for Python and native modules
+RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-venv \
+    python3-pip \
+    build-essential \
+    cmake \
+    libopenblas-dev \
+    liblapack-dev \
+    libx11-dev \
+    libgtk-3-dev \
+    libboost-all-dev \
+    ffmpeg \
+    && ln -s /usr/bin/python3 /usr/bin/python \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# =========================
-# 2️⃣ Install dependencies
-# =========================
-FROM base AS deps
-COPY pnpm-workspace.yaml ./
-COPY pnpm-lock.yaml ./
-COPY package.json ./
+# Install Node.js dependencies with layer caching
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
 COPY apps/web/package.json ./apps/web/
 COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY apps/background-jobs/tsconfig.json ./apps/background-jobs/
-RUN pnpm install --ignore-scripts
-RUN pnpm rebuild @tailwindcss/oxide
-COPY packages/prisma ./
-RUN pnpm prisma migrate deploy
-RUN pnpm prisma generate 
+COPY packages/shared/package.json ./packages/shared/
+COPY packages/prisma/ ./packages/prisma/
 
-# =========================
-# 3️⃣ Build app
-# =========================
-FROM base AS build
-COPY --from=deps /app/node_modules ./node_modules
-COPY . .
-RUN pnpm --filter background-jobs... build
+RUN --mount=type=cache,id=pnpm,target=/root/.pnpm-store \
+    pnpm install --frozen-lockfile
 
-# =========================
-# 4️⃣ Production runtime
-# =========================
-FROM base AS final
-COPY --from=build /app/apps/background-jobs/dist ./apps/background-jobs/dist
-COPY --from=deps /app/node_modules ./node_modules
-COPY --from=build /app/apps/background-jobs/package.json ./apps/background-jobs/
-COPY --from=build /app/package.json ./
-COPY --from=build /app/pnpm-lock.yaml ./
-COPY --from=build /app/pnpm-workspace.yaml ./
-RUN pnpm install --ignore-scripts
+# Copy application source code
+COPY apps ./apps
+COPY packages ./packages
+COPY tsconfig.json ./
 
-CMD ["pnpm", "--filter", "background-jobs", "start"]
+RUN pnpm rebuild @tailwindcss/oxide && \
+    pnpm rebuild rollup
+
+# Install Python dependencies with layer caching
+COPY python/requirements.txt /app/python/requirements.txt
+
+RUN python3 -m venv /venv
+ENV PATH="/venv/bin:$PATH"
+
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --upgrade pip && \
+    pip install -r /app/python/requirements.txt
+
+COPY python /app/python
+
+EXPOSE 4000 8765
+
+CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed && pnpm --filter background-jobs build && pnpm --filter background-jobs start"]
