--- a/docker/Dockerfile.background-jobs.dev
+++ b/docker/Dockerfile.background-jobs.dev
@@ -1,12 +1,11 @@
-# Base image
 FROM node:22.20.0
 
-# PNPM setup
+# Configure pnpm
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
 RUN corepack enable && corepack prepare pnpm@8.6.9 --activate
 
-# Install system dependencies
+# Install system dependencies for Python and native modules
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-venv \
@@ -24,43 +23,36 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# ------------------------
-# Node dependencies
-# ------------------------
+# Install Node.js dependencies with layer caching
 COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
 COPY apps/web/package.json ./apps/web/
 COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY packages/shared/ ./packages/shared
-COPY packages/prisma/ ./packages/prisma
+COPY packages/shared/package.json ./packages/shared/
+COPY packages/prisma/ ./packages/prisma/
 
-# Install Node dependencies
 RUN --mount=type=cache,id=pnpm,target=/root/.pnpm-store \
     pnpm install --frozen-lockfile
 
-RUN pnpm rebuild @tailwindcss/oxide
-RUN pnpm rebuild rollup
+# Copy application source code
+COPY apps ./apps
+COPY packages ./packages
+COPY tsconfig.json ./
 
-# ------------------------
-# Python dependencies
-# ------------------------
+RUN pnpm rebuild @tailwindcss/oxide && \
+    pnpm rebuild rollup
+
+# Install Python dependencies with layer caching
 COPY python/requirements.txt /app/python/requirements.txt
 
-# Create virtual environment outside /app
 RUN python3 -m venv /venv
 ENV PATH="/venv/bin:$PATH"
 
-# Upgrade pip and install dependencies (cached)
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip install --upgrade pip && \
     pip install -r /app/python/requirements.txt
 
-# Copy source code last
 COPY python /app/python
-COPY tsconfig.json ./
-COPY apps/web/vite.config.ts ./apps/web/vite.config.ts
 
-# Expose ports
 EXPOSE 4000 8765
 
-# Start the service
-CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed && pnpm --filter background-jobs build && pnpm --filter background-jobs start"]
+CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed && pnpm --filter background-jobs build && pnpm --filter background-jobs dev"]
