--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -22,7 +22,8 @@
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
     "pg": "^8.13.1",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "jimp": "^1.6.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
