--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -49,6 +49,7 @@
     "gopro-telemetry": "^1.2.11",
     "gpmf-extract": "^0.3.2",
     "ioredis": "^5.4.2",
+    "jimp": "^1.6.0",
     "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
     "node-fetch": "^3.3.2",
@@ -60,7 +61,6 @@
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.4",
     "redis": "^5.9.0",
-    "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
     "ws": "^8.18.3",
