--- a/docker/Dockerfile.background-jobs.dev
+++ b/docker/Dockerfile.background-jobs.dev
@@ -3,56 +3,44 @@ FROM node:22.20.0
 # Configure pnpm
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable && corepack prepare pnpm@8.6.9 --activate
+RUN corepack enable && corepack prepare pnpm@10.20.0 --activate
 
 # Install system dependencies for Python and native modules
 RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-venv \
-    python3-pip \
-    build-essential \
-    cmake \
-    libopenblas-dev \
-    liblapack-dev \
-    libx11-dev \
-    libgtk-3-dev \
-    libboost-all-dev \
-    ffmpeg \
+    python3 python3-venv python3-pip \
+    build-essential cmake libopenblas-dev liblapack-dev \
+    libx11-dev libgtk-3-dev libboost-all-dev ffmpeg \
     && ln -s /usr/bin/python3 /usr/bin/python \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-# Install Node.js dependencies with layer caching
+# Install Node.js dependencies
 COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
 COPY apps/web/package.json ./apps/web/
 COPY apps/background-jobs/package.json ./apps/background-jobs/
 COPY packages/shared/package.json ./packages/shared/
 COPY packages/prisma/ ./packages/prisma/
+RUN pnpm install --frozen-lockfile
 
-RUN --mount=type=cache,id=pnpm,target=/root/.pnpm-store \
-    pnpm install --frozen-lockfile
-
-# Copy application source code
+# Copy Node/TS code
 COPY apps ./apps
 COPY packages ./packages
 COPY tsconfig.json ./
+RUN pnpm rebuild @tailwindcss/oxide && pnpm rebuild rollup
 
-RUN pnpm rebuild @tailwindcss/oxide && \
-    pnpm rebuild rollup
-
-# Install Python dependencies with layer caching
-COPY python/requirements.txt /app/python/requirements.txt
-
-RUN python3 -m venv /venv
-ENV PATH="/venv/bin:$PATH"
-
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install --upgrade pip && \
-    pip install -r /app/python/requirements.txt
-
+# Copy Python code
 COPY python /app/python
 
+# Create venv outside source folder
+RUN python3 -m venv /app/.venv
+ENV PATH="/app/.venv/bin:$PATH"
+
+# Install Python dependencies
+RUN pip install --upgrade pip && pip install -r /app/python/requirements.txt
+
+WORKDIR /app/apps/background-jobs
 EXPOSE 4000 8765
 
-CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed && pnpm --filter background-jobs build && pnpm --filter background-jobs dev"]
+# Dev CMD
+CMD ["sh", "-c", "pnpm --filter background-jobs build && pnpm --filter background-jobs dev"]
