--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -15,10 +15,7 @@ services:
     env_file:
       - ../.env
     volumes:
-      - ..:/app
-      - ../.thumbnails:/.thumbnails
       - background_jobs_node_modules:/app/node_modules
-      - python_venv:/app/python/.venv
     networks:
       - app-network
 
@@ -45,7 +42,11 @@ services:
 
   chroma:
     image: chromadb/chroma:latest
-    ports:
+    environment:
+      CHROMA_CORS_ALLOW_ORIGINS: '["http://localhost:3745", "http://localhost:4000", "http://web:3745", "http://background-jobs:4000"]'
+      CHROMA_HOST: "0.0.0.0" 
+      CHROMA_PORT: "8000"
+    ports:  
       - "8000:8000"
     volumes:
       - ../.chroma_db:/data
@@ -65,12 +66,14 @@ services:
     image: postgres:16
     ports:
       - "5433:5432"
-    env_file:
-      - ../.env
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: app
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U user -d app"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -81,7 +84,6 @@ volumes:
   pgdata:
   web_node_modules:
   background_jobs_node_modules:
-  python_venv:
 
 networks:
   app-network:
