--- a/apps/desktop/tsconfig.json
+++ b/apps/desktop/tsconfig.json
@@ -6,7 +6,8 @@
       "@/app/*": ["./app/*"],
       "@/lib/*": ["./lib/*"],
       "@/resources/*": ["./resources/*"],
-      "@shared/*": ["../../packages/shared/*"]
+      "@shared/*": ["../../packages/shared/*"],
+      "@ui/*": ["../../packages/ui/src/*"]
     }
   },
   "files": [],
