--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,6 +12,7 @@
     "paths": {
       "~/*": ["./app/*"],
       "@shared/*": ["../../packages/shared/*"],
+      "@ui/*": ["../../packages/ui/src/*"],
       "@background-jobs/*": ["../../apps/background-jobs/*"]
     },
     "esModuleInterop": true,
