--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/iliashad"
   },
   "scripts": {
-    "dev": "cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w",
+    "dev": "pnpm run build:shared && cross-env ELECTRON_DISABLE_SANDBOX=1 electron-vite dev -w",
     "format": "prettier --write .",
     "lint": "eslint . --ext .ts,.tsx --fix",
     "start": "electron-vite preview",
@@ -45,11 +45,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "ffmpeg-ffprobe-static": "6.1.2-rc.1",
     "lucide-react": "^0.541.0",
     "radix-ui": "^1.4.3",
     "react-error-boundary": "^6.0.0",
     "react-router-dom": "^7.9.4",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.7",
     "ws": "^8.18.3",
