--- a/apps/desktop/tsconfig.node.json
+++ b/apps/desktop/tsconfig.node.json
@@ -6,7 +6,8 @@
     "lib/**/*",
     "resources/**/*",
     "app/**/*",
-    "../../packages/shared/**/*" // Add this to include shared package files
+    "../../packages/shared/**/*",
+    "../../packages/ui/**/*"
   ],
   "compilerOptions": {
     "composite": true,
@@ -15,7 +16,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@shared/*": ["../../packages/shared/*"] // This should point to the source files
+      "@shared/*": ["../../packages/shared/*"],
+      "@ui/*": ["../../packages/ui/src/*"]
     }
   }
 }
