--- a/apps/background-jobs/package.json
+++ b/apps/background-jobs/package.json
@@ -21,9 +21,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "ioredis": "^5.4.2",
+    "jimp": "^1.6.0",
     "pg": "^8.13.1",
-    "zod": "^4.1.12",
-    "jimp": "^1.6.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.6",
