--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/iliashad/edit-mind"
   },
   "dependencies": {
-    "@chroma-core/default-embed": "^0.1.8",
+    "@chroma-core/default-embed": "^0.1.9",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google/genai": "^1.25.0",
@@ -50,7 +50,6 @@
     "gpmf-extract": "^0.3.2",
     "ioredis": "^5.4.2",
     "jimp": "^1.6.0",
-    "langchain": "^0.1.36",
     "lucide-react": "^0.541.0",
     "node-fetch": "^3.3.2",
     "node-llama-cpp": "^3.14.2",
@@ -82,6 +81,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "framer-motion": "^12.23.12",
     "npm-run-all": "^4.1.5",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "prisma": "^6.18.0",
     "react": "^19.1.1",
