--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -13,11 +13,13 @@ face-recognition>=1.3.0
 dlib>=19.24.0
 
 # Emotion detection (optional - can be heavy)
-fer>=22.5.0
+fer===25.10.3
 tensorflow>=2.13.0
 
-# Vector database
-chromadb>=0.4.0
+# Video processing with audio support
+ffmpeg-python>=0.2.0
+moviepy>=1.0.3
+
 
 # Audio transcription
 faster-whisper>=1.2.1
@@ -39,3 +41,5 @@ python-multipart>=0.0.6
 # Testing
 pytest>=7.4.0
 pytest-mock>=3.12.0
+
+python-dotenv>=1.2.1
