--- a/docker/Dockerfile.background-jobs
+++ b/docker/Dockerfile.background-jobs
@@ -1,13 +1,18 @@
-FROM node:22.20.0
+FROM node:22.20.0-slim AS base
 
 # Configure pnpm
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable && corepack prepare pnpm@8.6.9 --activate
+RUN corepack enable && corepack prepare pnpm@10.20.0 --activate
 
-# Install system dependencies for Python and native modules
-RUN apt-get update && apt-get install -y \
-    python3 \
+# ============================================
+# Dependencies stage
+# ============================================
+FROM base AS dependencies
+
+# Install system dependencies in a single layer
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    python3=3.11.* \
     python3-venv \
     python3-pip \
     build-essential \
@@ -18,41 +23,67 @@ RUN apt-get update && apt-get install -y \
     libgtk-3-dev \
     libboost-all-dev \
     ffmpeg \
-    && ln -s /usr/bin/python3 /usr/bin/python \
-    && rm -rf /var/lib/apt/lists/*
+    && ln -sf /usr/bin/python3 /usr/bin/python \
+    && rm -rf /var/lib/apt/lists/* \
+    && apt-get clean
 
 WORKDIR /app
 
-# Install Node.js dependencies with layer caching
+# Copy package files for better layer caching
 COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
-COPY apps/web/package.json ./apps/web/
-COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/prisma/ ./packages/prisma/
+COPY apps/web/package.json ./apps/web/package.json
+COPY apps/background-jobs/package.json ./apps/background-jobs/package.json
+COPY packages/shared/package.json ./packages/shared/package.json
+COPY packages/prisma ./packages/prisma
+COPY scripts ./scripts
 
-RUN --mount=type=cache,id=pnpm,target=/root/.pnpm-store \
-    pnpm install --frozen-lockfile
+# Install dependencies
+RUN pnpm install --frozen-lockfile
 
-# Copy application source code
-COPY apps ./apps
-COPY packages ./packages
-COPY tsconfig.json ./
+# ============================================
+# Python dependencies stage
+# ============================================
+FROM dependencies AS python-deps
 
-RUN pnpm rebuild @tailwindcss/oxide && \
-    pnpm rebuild rollup
+COPY python/requirements.txt ./python/requirements.txt
 
-# Install Python dependencies with layer caching
-COPY python/requirements.txt /app/python/requirements.txt
-
-RUN python3 -m venv /venv
-ENV PATH="/venv/bin:$PATH"
+# Create and activate virtual environment
+RUN python3 -m venv /app/.venv
+ENV PATH="/app/.venv/bin:$PATH"
+ENV VIRTUAL_ENV="/app/.venv"
 
 RUN --mount=type=cache,target=/root/.cache/pip \
-    pip install --upgrade pip && \
-    pip install -r /app/python/requirements.txt
+    pip install --no-cache-dir --upgrade pip setuptools wheel && \
+    pip install --no-cache-dir -r python/requirements.txt
 
-COPY python /app/python
+# ============================================
+# Build stage
+# ============================================
+FROM python-deps AS builder
+
+# Copy source code
+COPY apps ./apps
+COPY packages ./packages
+COPY python ./python
+COPY tsconfig.json ./
+
+# Rebuild native modules for the target architecture
+RUN pnpm rebuild @tailwindcss/oxide rollup sharp
+
+# Build the application
+RUN pnpm --filter background-jobs build
+
+# ============================================
+# Start stage
+# ============================================
+FROM builder AS start
+
+WORKDIR /app/apps/background-jobs
+
+# Create cache directory with proper permissions
+RUN mkdir -p /app/models
+
 
 EXPOSE 4000 8765
 
-CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed && pnpm --filter background-jobs build && pnpm --filter background-jobs start"]
+CMD ["pnpm", "--filter", "background-jobs", "start"]
