--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -1,28 +1,54 @@
-FROM node:22.20.0
+FROM node:22.20.0-slim AS base
 
 # Configure pnpm
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable && corepack prepare pnpm@8.6.9 --activate
+RUN corepack enable && corepack prepare pnpm@10.20.0 --activate
+
+# ============================================
+# Dependencies stage
+# ============================================
+FROM base AS dependencies
 
 WORKDIR /app
 
-# Install Node.js dependencies with layer caching
-COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
-COPY apps/web/package.json ./apps/web/
-COPY apps/background-jobs/package.json ./apps/background-jobs/
-COPY packages/shared/package.json ./packages/shared/
-COPY packages/prisma/ ./packages/prisma/
+RUN apt-get update -y && apt-get install -y openssl
 
-RUN --mount=type=cache,id=pnpm,target=/root/.pnpm-store \
+# Copy package files for optimal layer caching
+COPY pnpm-workspace.yaml pnpm-lock.yaml package.json prisma.config.ts ./
+COPY apps/web/package.json ./apps/web/package.json
+COPY apps/background-jobs/package.json ./apps/background-jobs/package.json
+COPY packages/shared/package.json ./packages/shared/package.json
+COPY packages/prisma ./packages/prisma
+
+# Install dependencies with cache mount
+RUN --mount=type=cache,id=pnpm,target=/pnpm/store \
     pnpm install --frozen-lockfile
 
-# Copy application source and rebuild native modules
-COPY . .
+# ============================================
+# Build stage
+# ============================================
+FROM dependencies AS builder
 
-RUN pnpm rebuild @tailwindcss/oxide && \
-    pnpm rebuild rollup
+# Copy source code
+COPY apps ./apps
+COPY packages ./packages
+COPY tsconfig.json ./
+
+# Rebuild native modules
+RUN pnpm rebuild @tailwindcss/oxide rollup sharp
+
+# Build the web application
+RUN pnpm --filter web build
+
+# ============================================
+# Development stage
+# ============================================
+FROM builder AS development
+
+WORKDIR /app/apps/web
+
 
 EXPOSE 3745
 
-CMD ["sh", "-c", "pnpm prisma migrate deploy && pnpm prisma generate && pnpm prisma db seed && pnpm --filter web start --port 3745 --host"]
+CMD ["pnpm", "--filter", "web", "start", "--host", "0.0.0.0", "--port", "3745"]
