--- a/docker/Dockerfile.web.dev
+++ b/docker/Dockerfile.web.dev
@@ -20,6 +20,7 @@ COPY apps/web/package.json ./apps/web/package.json
 COPY apps/background-jobs/package.json ./apps/background-jobs/package.json
 COPY packages/shared/package.json ./packages/shared/package.json
 COPY packages/prisma ./packages/prisma
+COPY prisma.config.ts ./
 
 # Install dependencies
 RUN pnpm install --frozen-lockfile
@@ -50,4 +51,4 @@ WORKDIR /app/apps/web
 
 EXPOSE 3745
 
-CMD ["pnpm", "--filter", "web", "dev", "--host", "0.0.0.0", "--port", "3745"]
+CMD ["sh", "-c", "pnpm prisma migrate deploy --schema=/app/packages/prisma/schema.prisma && pnpm prisma generate --schema=/app/packages/prisma/schema.prisma && pnpm --filter web dev --host 0.0.0.0 --port 3745"]
