fix: update .env.example and make simpler for new users and move other system variables to .env.system

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,6 @@
+USE_LOCAL_MODEL="false"
 SESSION_SECRET=""
 GEMINI_API_KEY=""
 ENCRYPTION_KEY=""
 HOST_MEDIA_PATH="/path/to/your/media/folder"
-
-
-
-SEARCH_AI_MODEL="/app/models/qwen2.5-1.5b-instruct-q4_k_m.gguf"
-UNKNOWN_FACES_DIR="/app/data/.unknown_faces"
-PROCESSED_VIDEOS_DIR="/app/data/.analaysis"
-KNOWN_FACES_FILE="/app/data/.faces.json"
-KNOWN_FACES_FILE_LOADED="/app/data/.known_faces.json"
-FACES_DIR="/app/data/.faces"
-PYTHON_SCRIPT="/app/python/analysis_service.py"
-DATABASE_URL="postgresql://user:password@postgres:5432/app"
-REDIS_URL="redis://redis:6379"
-REDIS_HOST="redis"
-REDIS_PORT="6379"
-CHROMA_HOST="chroma"
-CHROMA_PORT="8000"
-PYTHON_PORT="8765"
-PORT="3745"
-BACKGROUND_JOBS_URL="http://background-jobs:4000"
-VENV_PATH="/app/.venv"
-PROCESSED_VIDEOS_DIR="/app/data"
-THUMBNAILS_PATH="/app/data/.thumbnails"
-NODE_ENV="development"
-BACKGROUND_JOBS_PORT="4000"
-WHISPER_CACHE_DIR="/app/models"
-YOLO_CONFIG_DIR="/app/models/yolo"
-STITCHED_VIDEOS_DIR="/app/data/.stiched-videos"
+SEARCH_AI_MODEL="/app/models/Qwen2.5-14B-Instruct-Q5_K_M.gguf"
